# taskcamp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  django.yml  docker-build-and-push.yml  manual.yml
accounts/: __init__.py  admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210323_1801.py  0003_user_birthdate.py  0004_create_public_group.py
accounts/templates/: account_profile.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  register_done.html
accounts/templates/email/: register_activate.txt
accounts/templatetags/: __init__.py  html_attributes.py
accounts/tests/: test_forms.py  test_models.py  test_views.py
documents/: __init__.py  admin.py  apps.py  forms.py  helpers.py  models.py  views.py
documents/migrations/: 0001_initial.py  0002_auto_20210322_0732.py  0003_auto_20210327_1336.py
documents/templates/: document_form.html
documents/tests/: test_forms.py  test_models.py  test_views.py
employees/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_auto_20210319_1330.py
employees/templates/: employee_confirm_delete.html  employee_detail.html  employee_form.html  employee_list.html
employees/tests/: test.py
home/: __init__.py  admin.py  apps.py  urls.py  views.py
home/templates/: home.html
home/tests/: test_views.py
kubernetes/: README.md  mailcatcher.yaml  memcached.yaml  postgres.yaml  rmq.yaml  taskcamp-deploy.yaml  taskcamp-secret.yaml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
projects/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
projects/fixtures/: data.json
projects/migrations/: 0001_initial.py  0002_auto_20210319_1330.py  0003_auto_20210321_0726.py  0004_auto_20210321_0803.py  0005_comment.py  0006_auto_20210321_0828.py  0007_auto_20210321_0840.py  0008_auto_20210321_1025.py  0009_task_documents.py  0010_project_documents.py
projects/templates/: project_confirm_delete.html  project_detail.html  project_form.html  project_list.html  projects_list.html  task_confirm_delete.html  task_detail.html  task_document_upload.html  task_form.html  task_list.html
projects/templatetags/: __init__.py  markdown_processor.py  query_builder.py  task_class.py
projects/tests/: test_admin.py  test_models.py  test_templatetags.py  test_views.py
taskcamp/: __init__.py  asgi.py  dbrouter.py  settings.py  urls.py  views.py  wsgi.py
taskcamp/tests/: test_dbrouter.py  test_urls.py  test_views.py
templates/: base.html  empty.html  nav.html
templates/email/: password_reset_email.html  password_reset_email_html.html  register_activate.html  register_welcome.html  register_welcome.txt
templates/handler/: 403.html  404.html  500.html
worker/: __init__.py  app.py  config.py
worker/email/: __init__.py  tasks.py
worker/tasks/: email.py
worker/tests/: test_app.py  test_email.py
