[project]
name = "taskcamp"
version = "0.1.0"
description = "simple project management tool powered by Django Framework"
authors = [{ name = "Ilia Dmitriev", email = "ilia.dmitriev@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.7",
    "markdown>=3.7",
    "psycopg2>=2.9.10",
    "pymemcache>=4.0.0",
    "redis>=5.2.1",
    "tzdata>=2025.2",
    "uwsgi>=2.0.28",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.7.1",
    "django-debug-toolbar>=5.1.0",
    "pdoc3>=0.11.6",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
exclude = [
    "manage.py",
    "*migrations*",
    "*/tests.py",
    ".git",
    "__pycache__",
    "docs",
    "old",
    "build",
    "dist",
    ".eggs/*",
    "*venv*/*",
    "*/tests/*",
    "*/test_utils/*",
    "*/test_*.py",
    "alembic/*",
]

[tool.coverage.run]
source = ["."]
branch = true
data_file = ".coverage"
omit = [
    "venv/*",
    "*/migrations/*.py",
    "taskcamp/asgi.py",
    "taskcamp/wsgi.py",
    "taskcamp/settings.py",
    "manage.py",
]


[tool.coverage.report]
fail_under = 100
show_missing = true


[tool.django-stubs]
django_settings_module = "taskcamp.settings"
